Added more explicit text on constant-time code.

--- a/jq255.md
+++ b/jq255.md
@@ -91,7 +91,7 @@ curves can be found on the [double-odd elliptic curves Web site].
     point (the "point-at-infinity" which is not actually "at infinity"
     in this coordinate system) is `I = (1,0)`. The curve also contains a
     single point of order 2 denoted `N = (-1,0)`.
-    
+
   - The underlying elliptic curve contains exactly `n = 2*r` points,
     with `r` being a prime integer. The group itself (jq255e or jq255s)
     has order `r`. For both groups, `r` is close to `2^254`.
@@ -176,6 +176,24 @@ and jq255s are sufficiently close to a power of two (namely `2^254`)
 that 32 bytes are enough to ensure the required indistinguishability
 from uniform selection.
 
+**A note on constant-time implementations:** The expression
+"*constant-time*" designates code such that the execution time and the
+memory access pattern (i.e. the addresses of memory slots that are
+accessed throughout execution) do not vary in a way that can be
+correlated with secret data. Some operations described in this document
+with conditional execution (`if` clauses in pseudocode) are to be
+executed depending on a secret Boolean condition, and thus SHOULD in
+practice use a constant-time implementation strategy: the clause
+contents should be computed systematically, then their results either
+kept or discarded through a constant-time selection primitive that
+typically uses bitwise Boolean operations on machine words. In the
+text below, we will use the following to denote a constant-time selection
+of value `v` (if `cond` is true) and value `u` (if `cond` is false):
+```
+CT_SELECT(v IF cond ELSE u)
+```
+(This notation is imported from the [Ristretto255 draft].)
+
 ## Group Element Operations
 
 In this section, practical procedures for computing point operations are
@@ -198,7 +216,7 @@ The pseudocode assumes that the following functions are available:
 
   - `half(x)` divides the field element `x` by two. It is usually
     implemented by a right-shift by 1 bit, then the conditional addition
-    of the constant `(q+1)/2` if the dropped bit was non-zero. Such an 
+    of the constant `(q+1)/2` if the dropped bit was non-zero. Such an
     implementation is considered to be a "fast" operation (i.e. at least
     as fast as an addition in the field).
 
@@ -253,7 +271,10 @@ Moreover, if `z` is indeed a square root of `x`, then it MUST be
 normalized to a non-negative value (i.e. if `sgn(z) = 1`, then `z` must
 be replaced with `-z`). The use of this fixed convention for square
 roots is needed for proper interoperability of the map-to-group and
-hash-to-group operations.
+hash-to-group operations. If the source data is secret, then these
+operations should be implemented in constant-time; notably, the selection
+of the non-negative root should use systematic evaluation of `-z`,
+and a constant-time selection, as in: `CT_SELECT(-z IF sgn(z) = 1 ELSE z)`.
 
 `is_square(x)` can be implemented as a simple wrapper around `sqrt(x)`,
 though faster implementations are possible with the [Legendre/Jacobi
@@ -446,7 +467,10 @@ def group_to_field(P):
 
 Here, `iZ*U` and `iZ*E` are the `u` and `e` coordinates, respectively.
 The group element is really encoded as the `u` coordinate of the
-representant point whose `e` coordinate is non-negative.
+representant point whose `e` coordinate is non-negative. If the point to
+encode is secret (e.g. it is the "shared secret" from a Diffie-Hellman
+key exchange process) then the conditional negation of `v` SHOULD be
+implemented in constant-time: `v = CT_SELECT(-v IF sgn(iZ*E) == 1 ELSE v)`.
 
 The decoding process rebuilds either the original `P`, or the other
 representant `P+N` of the same group element:
@@ -833,7 +857,17 @@ This process becomes constant-time if all the steps are constant-time.
 In particular, the lookup process from the window must then scan *all*
 elements from the window systematically, and select the correct one with
 constant-time conditional move operations that use bitwise Boolean
-operations.
+operations. With a primitive such as `CT_SELECT()`, the lookup of point
+`Q` in the loop can be expressed as follows:
+```python
+        Q = (GFq(1), GFq(1), GFq(0), GFq(0))
+        abs_digit = CT_SELECT(-sd[i] IF sd[i] < 0 ELSE sd[i])
+        for j in range(0, 16):
+            Qj = win[j]
+            Q = CT_SELECT(Qj IF abs_digit == j + 1 ELSE Q)
+        Qn = point_neg(Q)
+        Q = CT_SELECT(Qn IF sd[i] < 0 ELSE Q)
+```
 
 ### Scalar Split and Curve Endomorphism on jq255e
 
@@ -1422,7 +1456,7 @@ def hash_to_group(M):
     return point_add(Q1, Q2)
 ```
 
-**Note:** Here, the two 32-byte values `bb1` and `bb2`. which are
+**Note:** Here, the two 32-byte values `bb1` and `bb2`, which are
 obtained as hash outputs, are interpreted as 256-bit integers which are
 then implicitly reduced modulo `q`; this is unlike unlike
 `field_decode()`, the latter function rejecting out-of-range inputs
@@ -1446,6 +1480,7 @@ of 32 bytes; this is why there are two invocations of BLAKE2s in the
 [double-odd Jacobi quartic whitepaper]: https://eprint.iacr.org/2022/1052
 [double-odd elliptic curves Web site]: https://doubleodd.group/
 [RFC 2119]: https://www.rfc-editor.org/rfc/rfc2119
+[Ristretto255 draft]: https://datatracker.ietf.org/doc/html/draft-irtf-cfrg-ristretto255-decaf448-04
 [SageMath]: https://www.sagemath.org/
 [Legendre/Jacobi symbol]: https://en.wikipedia.org/wiki/Jacobi_symbol
 [optimized binary GCD]: https://eprint.iacr.org/2020/972
