Renamed peer_pk -> peer_encoded_Q in ECDH code.

--- a/jq255.md
+++ b/jq255.md
@@ -1360,7 +1360,7 @@ for further cryptographic operations, typically symmetric encryption.
 
 The process below describes how a party uses its own key pair (`sk` and
 `Q`) along with the *encoded* public key received from the peer
-(`peer_pk`) to compute the shared secret. The function returns two
+(`peer_encoded_Q`) to compute the shared secret. The function returns two
 values: the computed secret key (presumably shared with the peer), and a
 Boolean status. The status is set to `False` if the bytes sent by the
 peer cannot be decoded as a proper public key. When the peer bytes are
@@ -1374,10 +1374,10 @@ provide this extra security feature. In most normal uses of
 Diffie-Hellman, that feature is not needed.
 
 ```python
-def ECDH(sk, Q, peer_pk):
+def ECDH(sk, Q, peer_encoded_Q):
     # Decode the peer public key from the received bytes.
     peer_pk_good = True
-    peer_Q = public_key_decode(peer_pk)
+    peer_Q = public_key_decode(peer_encoded_Q)
     if peer_Q is False:
         peer_Q = G
         peer_pk_good = False
@@ -1388,7 +1388,7 @@ def ECDH(sk, Q, peer_pk):
 
     # Get the two encoded public keys, in lexicographic order.
     pk1 = public_key_encode(Q)
-    pk2 = peer_pk
+    pk2 = peer_encoded_Q
     ipk1 = int.from_bytes(pk1, byteorder='big')
     ipk2 = int.from_bytes(pk2, byteorder='big')
     if ipk1 > ipk2:
