Clarified wording on point doublings.

--- a/jq255.md
+++ b/jq255.md
@@ -580,9 +580,11 @@ the following:
   - Convert the final result from XWJ to EZUT.
 
 Depending on the used curve, it can be beneficial to combine some of
-these doublings with a switch to the other representant (i.e. computing
-`2*P+N` instead of `2*P`); this does not change the output as a group
-element, since we are free to use either of the two representants.
+these doublings with a switch to the other representant for either the
+input or the output point (i.e. computing `2*(P+N)`, `(2*P)+N` or even
+`(2*(P+N))+N` instead of `2*P`); this does not change the output as a
+group element, since we are free to use either of the two representants,
+but it can reduce the cost when working in XWJ coordinates.
 
 Two distinct functions, described below, are used for computing sequences
 of doublings on jq255e and jq255s, each leveraging the specific definition
